
* Removed category redirect feature, implementation was incomplete.
* (bug 18846) Remove update_password_format(), unnecessary, destroys all 
  passwords if a wiki with $wgPasswordSalt=false is upgraded with the web 
  installer.
* (bug 19127) Documentation warning for PostgreSQL users who run update.php: 
  use the same user in AdminSettings.php as in LocalSettings.php. 
* Localisation updates.

=== Configuration changes in 1.15 ===

* Added $wgNewPasswordExpiry, to specify an expiry time (in seconds) to
  temporary passwords
* Added $wgUseTwoButtonsSearchForm to choose the Search form behavior/look
* Added $wgNoFollowDomainExceptions to allow exempting particular domain names
  from rel="nofollow" on external links
* (bug 12970) Brought back $wgUseImageResize.
* Added $wgRedirectOnLogin to allow specifying a specifc page to redirect users
  to upon logging in (ex: "Main Page")
* Add $wgExportFromNamespaces for enabling/disabling the "export all from 
  namespace" option (disabled by default)

=== New features in 1.15 ===

* (bug 2242) Add an expiry time to temporary passwords
* (bug 9947) Add PROTECTIONLEVEL parser function to return the protection level
  for the current page for a given action
* (bug 17002) Add &minor= and &summary= as parameters in the url when editing,
  to automatically add a summary or a minor edit.
* (bug 16852) padleft and padright now accept multiletter pad characters
* When using 'UserCreateForm' hook to add new checkboxes into
  Special:UserLogin/signup, the messages can now contain HTML to allow
  hyperlinking to the site's Terms of Service page, for example
* Add new hook 'UserLoadFromDatabase' that is called while loading a user
  from the database.
* (bug 17045) Options on the block form are prefilled with the options of the
  existing block when modifying an existing block.
* (bug 17055) "(show/hide)" links to Special:RevisionDelete now use a CSS class
  rather than hardcoded HTML tags